# gmock_global_sample

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
